[package]
name = "pod-privileged-policy"
version = "0.2.1"
authors = ["José Guilherme Vanz <jguilhermevanz@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.15.0", default_features = false, features = ["v1_24"] }
#TODO change this once the new sdk is out
kubewarden-policy-sdk = {git="https://github.com/raulcabello/policy-sdk-rust", branch="highlevel-resources"}
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
